[package]
name = "libutp-rs"
version = "1.0.0"
authors = ["johsunds <jsundstrom1994@gmail.com>"]
edition = "2018"
description = "Async libutp interface"
keywords = ["bittorrent", "network"]
license = "MIT"
repository = "https://github.com/johsunds/libutp-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libutp-sys = "0.1.4"
mio = { version = "0.7.0", features = ["os-poll", "udp"]}
tokio = "1.3.0"
futures = "0.3.5"
log = "0.4.11"
socket2 = "0.3.15"
crossbeam = "0.7.3"
lazy_static = "1.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.86"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[dev-dependencies]
tokio = { version = "1.3.0", features = ["rt-multi-thread", "macros", "io-util"]}
env_logger = "0.7.1"
portpicker = "0.1.0"
bytesize = "1.0.1"